--- a/tests/dev.html
+++ b/tests/dev.html
@@ -16,6 +16,7 @@
                 
                 paths: {
                     'jQuery': '../vendors/jquery/jquery-2.1.4.min',
+                    'hbs': '../node_modules/requirejs-handlebars/hb',
                     'gPlayer': '../dist/gplayer'
                 },
                 
