changes for webpack

--- a/tests/dev.html
+++ b/tests/dev.html
@@ -17,7 +17,7 @@
                 paths: {
                     'jQuery': '../bower_components/jquery/dist/jquery.min',
                     'hbs': '../node_modules/requirejs-handlebars/hb',
-                    'gPlayer': '../dist/gplayer'
+                    'gPlayer': '../dist/debug/gplayer'
                 },
                 
                 shim: {
