--- a/tests/dev.html
+++ b/tests/dev.html
@@ -134,8 +134,8 @@
                     gPlayerAPI.addItem(song);
                 });
                 
-                console.log(gPlayer);
-                //window.og = gPlayer;
+                console.log(gPlayerAPI);
+                //window.og = gPlayerAPI;
             });
         </script>
 
