and some more debug :)

--- a/tests/dev.html
+++ b/tests/dev.html
@@ -106,7 +106,7 @@
             });
             
             require(['gPlayer'], function() {
-                console.log('OBJECTL LOADED! GPLAYER');
+                console.log('REQUIRE OBJECT LOADED! GPLAYER READY!');
                 var gPlayerAPI = $('#gplayer_ui').gPlayer();
                 
                 //append tmp list
