--- a/tests/dev.html
+++ b/tests/dev.html
@@ -90,7 +90,7 @@
         <script type="text/javascript">
             require.config({
                 paths: {
-                    'jQuery': '../bower_components/jquery/dist/jquery.min',
+                    'jquery': '../bower_components/jquery/dist/jquery.min',
                     'lodash': '../bower_components/lodash/lodash.min',
                     'gPlayer': '../dist/debug/gplayer'
                 },
