--- a/src/html/queue/item.html
+++ b/src/html/queue/item.html
@@ -1,4 +1,4 @@
-<li draggable="true" class="item-wrapper">
+<li class="item-wrapper">
     <div class="widget-item">
         <div class="widget-action remove"></div>
         <div class="widget-action play"></div>
