artist is html hyoerlink

--- a/src/html/queue/item.html
+++ b/src/html/queue/item.html
@@ -6,7 +6,7 @@
         <div class="widget-item-label">
             <em><figure><img src="<%- thumbnail %>" alt=""/></figure></em>
             <h4><%- song %></h4>
-            <strong><%- artist %></strong>
+            <strong><%= artist %></strong>
         </div>
     </div>
 </li>
