waveform samples added

--- a/tests/dev.html
+++ b/tests/dev.html
@@ -124,7 +124,7 @@
                     var artistLink = '<a href="#/artist/'+ artist.title +'">'+ artist.title +'</a>',
                         albumThumbnailUrl = '_mp3/'+ song.title +'.jpg',
                         mp3Url = '_mp3/'+ song.title +'.mp3',
-                        waveformUrl = '_mp3/'+ song.id +'/';
+                        waveformUrl = '_mp3/'+ song.id +'_';
                     
                     var song = {
                         type: 'mp3',
